# bitcoin-hodl

./: .gitignore  LICENSE  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/auth/: users.py
backend/app/database/: db.py
backend/app/models/: models.py
backend/app/routers/: __init__.py  bitcoin.py  transactions.py  users.py
backend/app/schemas/: schemas.py
frontend/: Dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.jsx  ForgotPassword.jsx  Login.jsx  Logout.jsx  Register.jsx  ResetPassword.jsx  Transactions.jsx  TransactionsGraph.jsx  index.css  index.jsx  theme.js
