[project]
name = "backend"
version = "0.1.0"
description = "Bitcoin HODL tracker backend service"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.30.0",
    "fastapi-users[sqlalchemy]>=14.0.1",
    "fastapi[standard]>=0.115.12",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.5",
    "sqlalchemy>=2.0.41",
    "uvicorn[standard]>=0.34.3",
]
